@@ -1,3 +1,13 @@
+2010-09-02  Lucas De Marchi  <lucas.demarchi@profusion.mobi>
+
+        Reviewed by Antonio Gomes.
+
+        [EFL] Name install directories according to library name
+        https://bugs.webkit.org/show_bug.cgi?id=45126
+
+        * CMakeListsEfl.txt: include diretory follows library name.
+        * ewebkit.pc.in: Ditto.
+
 2010-08-31  Dave Hyatt  <hyatt@apple.com>
 
         Reviewed by Sam Weinig.
