@@ -2,6 +2,16 @@
 
         Reviewed by Antonio Gomes.
 
+        [EFL] Name install directories according to library name
+        https://bugs.webkit.org/show_bug.cgi?id=45126
+
+        * cmake/OptionsEfl.cmake: Use library name in order to define the data
+        directory.
+
+2010-09-02  Lucas De Marchi  <lucas.demarchi@profusion.mobi>
+
+        Reviewed by Antonio Gomes.
+
         [EFL] Do not override custom compile flags
         https://bugs.webkit.org/show_bug.cgi?id=45125
 
